# judge-evals

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: labels.jsonl  rubric.yaml  samples.jsonl
scripts/: benchmark.py  gate_demo.py
src/judge_evals/: __init__.py  agreement.py  bias.py  cache.py  cli.py  gate.py  labels.py  prompt.py  runner.py  types.py
tests/: test_agreement.py  test_bias.py  test_cache.py  test_cli.py  test_gate.py  test_labels.py  test_prompt.py  test_runner.py  test_types.py
