[project]
name = "judge-evals"
version = "0.1.0"
description = "LLM-as-judge evaluation harness: rubric scoring offline and as a runtime retry gate."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "litellm>=1.40",
    "typer>=0.12",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "rich>=13.0",
    "scikit-learn>=1.5",
]

[project.scripts]
judge-evals = "judge_evals:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/judge_evals/cli.py" = ["B008"]  # typer.Option() in defaults is idiomatic

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
